--- a/index.html
+++ b/index.html
@@ -4,28 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Form</title>
 </head>
 <body>
-    <div class = "sun"></div>
-
-    <article class = "filloutForm ">
-        <form action="./form-submitted.html">
-            <label for="fname">First Name:</label>
-                <input type="text" name="fname" id="fname" /><br/><br/>
-            <label for="fname">Last Name:</label>
-                <input type="text" name="lname" id="lname" /><br/><br/>
-            <label for="cellNumber">Cell Number:</label>
-                <input type="number" id="cellNumber" name="cellNumber"/><br/><br/>
-            <label for="email">Email:</label>
-                <input type="email" id="email" name="email" /><br/><br/>
+    <section class = "aGrid">
+        <div class = "sky"><d/iv>
+        <div class = "sun"></div>
+            <header><h1 align="center">Welcome to Palm Springs Hotel Resort</h1></header>
+            <p>Before booking your hotel room, please complete the form below, and one of our administrators will contact you.</p>
+        <article class = "filloutForm ">
+            <form action="./form-submitted.html">
+                <label for="fname">First Name:</label><br/>
+                    <input type="text" name="fname" id="fname" /><br/><br/>
+                <label for="fname">Last Name:</label><br/>
+                    <input type="text" name="lname" id="lname" /><br/><br/>
+                <label for="cellNumber">Cell Number:</label><br/>
+                    <input type="number" id="cellNumber" name="cellNumber"/><br/><br/>
+                <label for="email">Email:</label><br/>
+                    <input type="email" id="email" name="email" /><br/><br/>
                 <input type="submit" value="Submit" />
-        </form>
-    </article>
+            </form>
+        </article>
 
-
-
-    <div class = "grass"></div>
-
+        <div class="moveTree">
+            <div class="christmasTree"></div>
+            <div class="treeStem"></div>
+        </div>
+        <div class="moveTree2">
+            <div class="christmasTree"></div>
+            <div class="treeStem"></div>
+        </div>
+        <div class = "house">
+            <div class = "roof"></div>
+            <div class = "bottomHouse"></div>
+        </div>
+        <div class = "grass"></div>
+    </section>
 </body>
 </html>
