More CSS work, and HTML page editing.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </div>
         <div class="grass"></div>
         <div class="dirt"></div>
+        <div class="rectangle1"></div>
+        <div class="rectangle2"></div>
+        <div class="rectangle3"></div>
         <footer class="aGridBackgroundBottom" align="center">&copy Made in California</footer>
     </section>
 </body>
