--- a/form-submitted.html
+++ b/form-submitted.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Form</title>
 </head>
-<body>
-    <h1>Your form has been submitted</h1>
-    <form action="./index.html"><button>Go Back</button></form> 
+<body class = "aGridBackgroundColor">
+    <div>
+        <header><h1 align="center">Thank You, your form has been submitted.</h1></header>
+        <article class = "paragraph">
+            <p><i>We will contact you within the next 3 to 4 business days.</i></p>
+            <form action="./index.html"><button>Go Back</button></form> 
+        </article>
+    </div
 </body>
 </html>
