Adjusting CSS to work for mobile and tablet.

--- a/index.html
+++ b/index.html
@@ -8,43 +8,44 @@
 </head>
 <body class = "aGridBackgroundColor">
     <section>
-        <div class = "sky"><d/iv>
-        <div class = "sun"></div>
-        <header><h1 class = "aHeader" align="center">Welcome to Palm Springs Hotel Resort</h1></header>
-        <article class = "paragraph">
-            <p>Please complete the form below before booking your hotel room, and one of our administrators will contact you.</p>
-        </article>
-        <article class = "filloutForm ">
-            <form action="./form-submitted.html">
-                <label for="fname">First Name:</label><br/>
-                    <input type="text" name="fname" id="fname" /><br/><br/>
-                <label for="fname">Last Name:</label><br/>
-                    <input type="text" name="lname" id="lname" /><br/><br/>
-                <label for="cellNumber">Phone Number:</label><br/>
-                    <input type="number" id="cellNumber" name="cellNumber"/><br/><br/>
-                <label for="email">Email:</label><br/>
-                    <input type="email" id="email" name="email" /><br/><br/>
-                <input type="submit" value="Submit" />
-            </form>
-        </article>
-
-        <div class="moveTree">
-            <div class="christmasTree"></div>
-            <div class="treeStem"></div>
+        <div class="sky">
+            <div class="blackItemBlock"></div>
+            <div class = "sun"></div>
+            <header><h1 class = "aHeader" align="center">Welcome to Palm Springs Hotel Resort</h1></header>
+            <article class = "paragraph">
+                <p>Please complete the form below before booking your hotel room, and one of our administrators will contact you.</p>
+            </article>
+            <article class = "filloutForm ">
+                <form action="./form-submitted.html">
+                    <label for="fname">First Name:</label><br/>
+                        <input type="text" name="fname" id="fname" /><br/><br/>
+                    <label for="fname">Last Name:</label><br/>
+                        <input type="text" name="lname" id="lname" /><br/><br/>
+                    <label for="cellNumber">Phone Number:</label><br/>
+                        <input type="number" id="cellNumber" name="cellNumber"/><br/><br/>
+                    <label for="email">Email:</label><br/>
+                        <input type="email" id="email" name="email" /><br/><br/>
+                    <input type="submit" value="Submit" />
+                </form>
+            </article>
+            <div class="moveTree">
+                <div class="christmasTree"></div>
+                <div class="treeStem"></div>
+            </div>
+            <div class="moveTree2">
+                <div class="christmasTree"></div>
+                <div class="treeStem"></div>
+            </div>
+            <div class = "house">
+                <div class = "roof"></div>
+                <div class = "bottomHouse"></div>
+            </div>
+            <div class="grass"></div>
+            <div class="dirt"></div>
+            <div class="rectangle1"></div>
+            <div class="rectangle2"></div>
+            <div class="rectangle3"></div>
         </div>
-        <div class="moveTree2">
-            <div class="christmasTree"></div>
-            <div class="treeStem"></div>
-        </div>
-        <div class = "house">
-            <div class = "roof"></div>
-            <div class = "bottomHouse"></div>
-        </div>
-        <div class="grass"></div>
-        <div class="dirt"></div>
-        <div class="rectangle1"></div>
-        <div class="rectangle2"></div>
-        <div class="rectangle3"></div>
         <footer class="aGridBackgroundBottom" align="center">&copy Made in California</footer>
     </section>
 </body>
