Small fix for css file.

--- a/form-submitted.html
+++ b/form-submitted.html
@@ -8,4 +8,11 @@
 </head>
 <body class = "aGridBackgroundColor">
     <div>
-        <header><h1 alig
+        <header><h1 align="center">Thank You, your form has been submitted.</h1></header>
+        <article class = "paragraph">
+            <p><i>We will contact you within the next 3 to 4 business days.</i></p>
+            <form action="./index.html"><button>Go Back</button></form> 
+        </article>
+    </div
+</body>
+</html>
